Fix blurry image

--- a/src/components/DashBoard/sidebar/sidebar.module.css
+++ b/src/components/DashBoard/sidebar/sidebar.module.css
@@ -24,7 +24,9 @@
 .userImage{
     align-items: center;
     border-radius: 50%;
-    object-fit: cover;
+    object-fit: fill;
+    width: 60px;
+    height: 60px;
   }
   
   .userDetail{
